2010-02-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* gensymlist.sh.in: Use TARGET_CC instead of CC.

2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (GRUB_MOD_INIT(play)): Fix help.
	* docs/grub.texi (Command-line and menu entry commands): Document play
	command.

2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (grub_cmd_play): If grub_file_open fails,
	parse arguments as inline tempo and notes.  Move code for playing notes
	to...
	(play): ... new function.

2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (T_REST, T_FINE, struct note, beep_on): Use
	grub_uint16_t instead of short.
	(grub_cmd_play): Use grub_uint32_t instead of int, convert data from
	disk from little endian to cpu endianness.

2010-02-07  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (BASE_TEMPO): Set to 60 *
	GRUB_TICKS_PER_SECOND instead of 120.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Wait for possible
	escape sequence after \e.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_putchar): Don't output
	non-ASCII characters.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Enclose
	set root in single quotes to prevent \, from being unescaped.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Prevent unknown commands from stopping menuentry execution.

	* script/execute.c (grub_script_execute_cmdline): Print error after
	unknown command.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/i386/pc/pxe.c (GRUB_MOD_INIT): Fix typo.
	Reported by: Pavel Pisa.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* io/gzio.c (grub_gzio_open): Use grub_zalloc.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>
